--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MapForm"></activity>
+        <activity android:name=".HistoryTransaction"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".MapForm" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
